...
                  ),
 
                GlassContainer(
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.stretch,
                    children: [
                      const Text('GHCAA AUTHENTICATION', 
                        textAlign: TextAlign.center,
                        style: TextStyle(
                          color: AppTheme.royalGold,
                          fontWeight: FontWeight.w900,
                          fontSize: 10,
                          letterSpacing: 2,
...
